--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-native": "^4.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
@@ -32,5 +36,8 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
